content/v3/authorization/v2.x/configuration/powerscale/_index.md
---
title: PowerScale
linktitle: PowerScale
description: >
  Enabling CSM Authorization for PowerScale CSI Driver
---
{{% pageinfo color="primary" %}}
{{< message text="1" >}}
{{% /pageinfo %}}

## Configuring PowerScale CSI Driver with CSM for Authorization

Given a setup where Kubernetes, a storage system, and the CSM for Authorization Proxy Server are deployed, follow these steps to configure the CSI Drivers to work with the Authorization sidecar:

1. Apply the secret containing the token data into the driver namespace. It's assumed that the Kubernetes administrator has the token secret manifest, generated by your storage administrator via [Generate a Token](../#generate-a-token), saved in `/tmp/token.yaml`.

    ```console
    kubectl apply -f /tmp/token.yaml -n isilon
    ```

   This takes the assumption that PowerScale will be installed in the `isilon` namespace.

2. Edit these parameters in `samples/secret/karavi-authorization-config.json` file in [CSI PowerScale](https://github.com/dell/csi-powerscale/tree/main/samples/secret) driver and update/add connection information for one or more backend storage arrays. In an instance where multiple CSI drivers are configured on the same Kubernetes cluster, the port range in the *endpoint* parameter must be different for each driver.

  > **Purpose of this secret**: The `karavi-authorization-config` secret tells the Authorization sidecar proxy which localhost endpoint to listen on and where the actual storage array is located. The CSI driver sends requests to the localhost endpoint; the sidecar intercepts them, attaches the tenant token, and forwards them to the CSM Authorization Proxy Server, which then proxies to the actual storage array.

  | Parameter                 | Description                                                                                                      | Required | Default                        |
  | ------------------------- | ---------------------------------------------------------------------------------------------------------------- | -------- | ------------------------------ |
  | username                  | Username for connecting to the backend storage array. This parameter is ignored when Authorization is enabled (credentials are managed via Vault). | No       | -                              |
  | password                  | Password for connecting to the backend storage array. This parameter is ignored when Authorization is enabled (credentials are managed via Vault). | No       | -                              |
  | intendedEndpoint          | HTTPS REST API endpoint of the backend storage array. This is the actual endpoint the Proxy Server will forward requests to. | Yes      | -                              |
  | endpoint                  | HTTPS localhost endpoint that the authorization sidecar will listen on. The CSI driver is configured to send requests here instead of directly to the storage array. | Yes      | https://localhost:9400         |
  | systemID                  | Cluster name of the backend storage array.                                                                       | Yes      | " "                            |
  | skipCertificateValidation | A boolean that enables/disables certificate validation of the backend storage array. This parameter is not used by the sidecar (certificate validation to the array is handled by the Proxy Server). | No       | true                           |
  | isDefault                 | A boolean that indicates if the array is the default array. This parameter is not used by the sidecar.           | No       | default value from values.yaml |

  Sample `karavi-authorization-config.json`:

  ```json
  {
    "storageArrays": [
      {
        "username": "ignored",
        "password": "ignored",
        "intendedEndpoint": "https://10.0.0.1:8080",
        "endpoint": "https://localhost:9400",
        "systemID": "cluster1",
        "skipCertificateValidation": true,
        "isDefault": true
      }
    ]
  }
  ```

  Create the karavi-authorization-config secret using this command:

  ```bash
  kubectl -n isilon create secret generic karavi-authorization-config --from-file=config=samples/secret/karavi-authorization-config.json -o yaml --dry-run=client | kubectl apply -f -
  ```

3. Create the proxy-server-root-certificate secret.

    > **Purpose**: This secret contains the Root CA certificate used to establish **secure TLS communication between the Authorization sidecar** (running alongside the CSI driver) **and the CSM Authorization Proxy Server** (exposed via Ingress). It is **not** related to the TLS certificate of the backend storage array.

    **Where to get `rootCertificate.pem`:**
    - If CSM Authorization was installed with a **self-signed certificate** (via cert-manager), extract the CA certificate from the cert-manager CA secret (e.g., `karavi-selfsigned-tls`) in the `authorization` namespace.
    - If CSM Authorization was installed with **your own certificate**, provide the **Root CA certificate that signed it** (the root of the certificate chain that the Proxy Server's TLS certificate was issued from).
    - If running in **insecure mode** (not recommended for production), create the secret with empty data and set `skipCertificateValidation` to `true` in the driver configuration.

    **Relationship with `skipCertificateValidation`:**
    - When `SKIP_CERTIFICATE_VALIDATION` is set to `true` in the Authorization sidecar configuration (Step 5), the sidecar skips TLS verification of the Proxy Server, and this secret can be empty.
    - When `SKIP_CERTIFICATE_VALIDATION` is set to `false`, this secret must contain a valid Root CA certificate.

    If running in *insecure* mode, create the secret with empty data:

      ```bash

      kubectl -n isilon create secret generic proxy-server-root-certificate --from-literal=rootCertificate.pem= -o yaml --dry-run=client | kubectl apply -f -
      ```

    Otherwise, create the proxy-server-root-certificate secret with the appropriate file:

      ```bash

      kubectl -n isilon create secret generic proxy-server-root-certificate --from-file=rootCertificate.pem=/path/to/rootCA -o yaml --dry-run=client | kubectl apply -f -
      ```

4. Prepare the driver configuration secret, applicable to your driver installation method, to communicate with the CSM Authorization sidecar.

    **Operator**

    Refer to the [Prerequisite](../../../../deployment/csmoperator/drivers/powerscale/#prerequisite) section to prepare the `secret.yaml` file to configure the driver to communicate with the CSM Authorization sidecar.

    - Update `endpoint` to match the localhost endpoint in `samples/secret/karavi-authorization-config.json`.

    - Update `mountEndpoint` to the PowerScale OneFS API server. For example, 10.0.0.1.

    - Update `skipCertificateValidation` to `true`.

    - The `username` and `password` can be any value since they will be ignored.

    Example:

    ```yaml
    isilonClusters:
      - clusterName: "cluster1"
        username: "ignored"
        password: "ignored"
        isDefault: true
        endpoint: localhost
        endpointPort: 9400
        mountEndpoint: 10.0.0.1
        skipCertificateValidation: true
    ```

    **Helm**

    Refer to the [Install the Driver](../../../../deployment/helm/drivers/installation/isilon/#install-the-driver) section to edit the parameters to prepare the `samples/secret/secret.yaml` file to configure the driver to communicate with the CSM Authorization sidecar.

    - Update `endpoint` to match the localhost endpoint in `samples/secret/karavi-authorization-config.json`.

    - Update `mountEndpoint` to the PowerScale OneFS API server. For example, 10.0.0.1.

    - Update `skipCertificateValidation` to `true`.

    - The `username` and `password` can be any value since they will be ignored.

    Example:

    ```yaml
    isilonClusters:
      - clusterName: "cluster1"
        username: "ignored"
        password: "ignored"
        isDefault: true
        endpoint: localhost
        endpointPort: 9400
        mountEndpoint: 10.0.0.1
        skipCertificateValidation: true
    ```

5. Enable CSM Authorization in the driver installation applicable to your installation method.

    **Operator**

    Refer to the [Install Driver](../../../../deployment/csmoperator/drivers/powerscale/#install-driver) section to edit the parameters in the Custom Resource to enable CSM Authorization.

    Under `modules`, enable the module named `authorization`:

    - Update the `enabled` field to `true.`

    - Update the `image` to the image of the CSM Authorization sidecar. In most cases, you can leave the default value.

    - Update the `PROXY_HOST` environment value to the hostname of the CSM Authorization Proxy Server. `csm-authorization.com` is a placeholder for the proxyHost. See the administrator of CSM for Authorization for the correct value.

    - Update the `SKIP_CERTIFICATE_VALIDATION` environment value to `true` or `false` depending on if you want to disable or enable certificate validation of the CSM Authorization Proxy Server.

    - Do not update the `configVersion`. You will notice in the example that it is set to v1.13.0, this ensures that Operator checks on version support do not prevent deployment of the v2.0.0 version of authorization.

    ```yaml
    modules:
      # Authorization: enable csm-authorization for RBAC
      - name: authorization
        # enable: Enable/Disable csm-authorization
        enabled: true
        configVersion: v1.13.0
        components:
        - name: karavi-authorization-proxy
          image: quay.io/dell/container-storage-modules/csm-authorization-sidecar:v2.0.0
          envs:
            # proxyHost: hostname of the csm-authorization server
            - name: "PROXY_HOST"
              value: "csm-authorization.com"

            # skipCertificateValidation: Enable/Disable certificate validation of the csm-authorization server
            - name: "SKIP_CERTIFICATE_VALIDATION"
              value: "true"
    ```

    **Helm**

    Refer to the [Install the Driver](../../../../deployment/helm/drivers/installation/isilon/#install-the-driver) section to edit the parameters in `my-isilon-settings.yaml` file to enable CSM Authorization.

    - Update `authorization.enabled` to `true`.

    - Update `images.authorization` to the image of the CSM Authorization sidecar. In most cases, you can leave the default value.

    - Update `authorization.proxyHost` to the hostname of the CSM Authorization Proxy Server. `csm-authorization.com` is a placeholder for the proxyHost. See the administrator of CSM for Authorization for the correct value.

    - Update `authorization.skipCertificateValidation` to `true` or `false` depending on if you want to disable or enable certificate validation of the CSM Authorization Proxy Server.

   Example:

    ```yaml
    authorization:
      enabled: true

      # sidecarProxyImage: the container image used for the csm-authorization-sidecar.
      sidecarProxyImage: quay.io/dell/container-storage-modules/csm-authorization-sidecar:v2.0.0

      # proxyHost: hostname of the csm-authorization server
      # Default value: None
      proxyHost: csm-authorization.com

      # skipCertificateValidation: certificate validation of the csm-authorization server
      # Allowed Values:
      #   "true" - TLS certificate verification will be skipped
      #   "false" - TLS certificate will be verified
      # Default value: "true"
      skipCertificateValidation: true
    ```

6. Install the Dell CSI PowerScale driver following the appropriate documentation for your installation method.
